# backtesting

./: .gitignore  data_collector.py  database.py  logger_config.py  main.py  requirements.txt  utils.py
app/: backtester.py  data_collector.py  database.py  main.py  main_interactive.py  utils.py
app/config/: config.py  logger.py  paths.py
app/config/yaml/: 1.yaml  2.yaml  sup_res.yaml
app/exchanges/: mexc.py
app/strategies/: ichimoku.py  obv.py  support_resistance.py
backtestingCpp/: CMakeLists.txt  Database.cpp  Database.h  main.cpp
backtestingCpp2/: CMakeLists.txt  Database.cpp  Database.h  main.cpp
docs/: strategies.md
exchanges/: binance.py  mexc.py
tests/unit/: test_timeframe_conversion.py
